@@ -125,7 +125,7 @@ set the current session name to \fIsession_id\fR
 
 .TP
 .BR \-ui " " \fItype\fR
-select the user interface, can be one of \fIncurses\fR, \fIdummy\fR or \fIjson\fR
+select the user interface, can be one of \fIterminal\fR, \fIdummy\fR or \fIjson\fR
 
 .TP
 .BR \-clear
